--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -1,4 +1,4 @@
-{% extends "base.html"%}
+{% extends "base.html" %}
 {% block content %}
 
 <h3 class="light-blue-text text-darken-4 center-align">Tasks</h3>
@@ -18,14 +18,18 @@
             <i class="fas fa-caret-down"></i>
             <strong>{{ task.task_name }}</strong> : {{ task.due_date.strftime("%d %B, %Y") }}
             {% if task.is_urgent == True %}
-                <i class="fas fa-exclamation-circle light-blue-texttext-lighten-2"></i>
+            <i class="fas fa-exclamation-circle light-blue-text text-lighten-2"></i>
             {% endif %}
         </div>
         <div class="collapsible-body">
             <strong>{{ task.category }}</strong>
             <p>{{ task.task_description }}</p>
+            <p>
+                <a href="{{ url_for('edit_task', task_id=task.id) }}" class="btn green accent-4">Edit</a>
+            </p>
         </div>
     </li>
     {% endfor %}
 </ul>
+
 {% endblock %}
